Add profile icons and ability to chat

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "dev": "parcel index.html",
         "build": "parcel build index.html --out-dir build",
         "copyAssets": "cpx \"src/assets/**\" \"dist/assets\"",
-        "copyAssetsBuild": "cpx \"src/assets/**\" \"build/assets\""
+        "copyHtml": "cpx \"src/dom_html/**\" \"dist/dom_html\"",
+        "copyAssetsBuild": "cpx \"src/assets/**\" \"build/assets\"",
+        "copyHtmlBuild": "cpx \"src/dom_html/**\" \"build/dom_html\""
     },
     "author": "Osama El Hariri",
     "license": "ISC",
